--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "react": "18.2.0",
     "react-native": "0.72.0",
     "react-native-fast-image": "^8.6.3",
+    "react-native-floating-label-input": "^1.4.2",
     "react-native-gesture-handler": "^2.12.0",
+    "react-native-linear-gradient": "^2.7.3",
+    "react-native-reanimated": "^3.3.0",
     "react-native-safe-area-context": "^4.5.3",
-    "react-native-screens": "^3.21.0"
+    "react-native-screens": "^3.21.0",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
